# dctap-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  TODO.txt  asdf.txt  bump.sh  comments.txt  deploy.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  testme.py
.github/workflows/: python-app.yml.disabled  python-tests.yaml
dctap/: .gitignore  IDEAS.txt  __init__.py  classes.py  cli.py  config.py  csvreader.py  csvreader2.py  csvshape.py  defaults.py  exceptions.py  expand_prefixes.ipynb  inspect.py  kindalike.csv  kindalike.py  kindalike2.csv  loggers.py  model  repeated_header.csv  shapesdict.txt  tapclasses.py  test_new_getrows.py  utils.py  what.csv
docs/: conf.py  index.rst  index_rst.txt  refs.sh  requirements.txt
docs/about/: About.rst  index.rst
docs/basics/: Basics.rst  Basics_minimal.rst  Basics_properties_can_have_labels.rst  Shapes.rst  Shapes_declared_in_separate_row.rst  propid.csv  propid.rst  propid_label.rst  propid_valuetype.csv  propid_valuetype.rst  shape.csv  shape.rst  shape_referenced.csv  shape_referenced.rst  shape_variant.rst
docs/cli/: Cli.rst  index.rst
docs/config/: dctap.yaml  element_aliases.csv  index.rst
tests/: .gitignore  .pylintrc  Session.vim  __init__.py  config.yaml  conftest.py  dctap.yml  input  source.csv  test_CONFIG__add_colons_to_prefixes_if_needed.py  test_CONFIG__get_aliases_dict.py  test_CONFIG__get_config_extra_element_aliases.py  test_CONFIG__initialize_config_dict.py  test_CONFIG__shape_elements.py  test_CONFIG_config_defaults_decorator.py  test_CONFIG_get__alias2element_mappings.py  test_CONFIG_get__compute_alias2element_mappings.py  test_CONFIG_get_config.py  test_CONFIG_get_config_extra_element_aliases.py  test_CONFIG_get_config_extra_shape_elements.py  test_CONFIG_get_shems_stems.py  test_CONFIG_write.py  test_CONFIG_write_configfile.py  test_CSVREADER__add_namespaces.py  test_CSVREADER__get_prefixes_actually_used.py  test_CSVREADER__get_rows.py  test_CSVREADER__get_tapshapes.py  test_CSVREADER__list_recognized_elements.py  test_CSVREADER__make_shape.py  test_CSVREADER__mkshape.py  test_CSVREADER__normalize_element_name.py  test_CSVREADER__normalize_header_line.py  test_CSVREADER__normalize_header_name.py  test_CSVREADER__reduce_shapesdict.py  test_CSVREADER__set_shape_keys.py  test_CSVREADER__set_shape_keys_and_statement_template_keys.py  test_CSVREADER_csvreader.py  test_CSVREADER_csvreader2.py  test_CSVREADER_extra_element_aliases.py  test_CSVREADER_get_prefixes.py  (+99 more)
(+213 files in other folders)
