[build-system]
requires = ["setuptools!=50.0","flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "dctap"
author = "DCMI"
author-email = "tom@tombaker.org"
home-page = "https://github.com/dcmi/dctap-python"
requires = [
    "click",
    "ruamel.base",
    "ruamel.yaml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description-file = 'README.rst'
requires-python = '>=3.7'

[tool.flit.metadata.requires-extra]
test = [
    "black",
    "coverage",
    "ipdb",
    "ipykernel",
    "ipython",
    "pylint",
    "pytest",
    "pytest-cov",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

[tool.flit.scripts]
dctap = "dctap.cli:cli"

[tool.black]
line_length = 88
